Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10487

[WIN32SS?] ros crash -> runs out of user handles after running stress.bat for about an hour

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 0.4.0
    • Win32SS
    • None

    Description

      r69815 gcc dbg on VBox 4.3.32

      run stress.bat for <1hour, ros will die due to repeatedly hit user handle leak
      see react.log

      Attachments

        1. react.log
          4.75 MB
          reactosfanboy
        2. stress.bat
          0.1 kB
          reactosfanboy
        3. ntuser-deref-accel.patch
          0.5 kB
          ThFabba

        Activity

          People

            ThFabba ThFabba
            reactosfanboy reactosfanboy
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: