[WIN32K:NTUSER] - Release extra reference on accelerator objects after creation. Fixes user handle leak. CORE-10487 #resolve

svn path=/trunk/; revision=69832